test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/prefix_if.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  -
  const int(1)
  ;
  if
  (
  ++
  identifier(a)
  )
  return
  const int(0)
  ;
  else
  if
  (
  ++
  identifier(a)
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
