test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(label)
  :
  int
  identifier(a)
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
